force-app/main/default/objects/ConsolBill__c/fields/Mntmantbuying__c.field-meta.xml
<CustomField>
    <fullName>Mntmantbuying__c</fullName>
    <label>Mã n.tệ (ma_nt)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>