force-app/main/default/objects/ConsolBill__c/fields/Mphmaphiibuying__c.field-meta.xml
<CustomField>
    <fullName>Mphmaphiibuying__c</fullName>
    <label>Mã phí (ma_phi_i)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>