force-app/main/default/objects/ConsolBill__c/fields/Mtd1matdibuying__c.field-meta.xml
<CustomField>
    <fullName>Mtd1matdibuying__c</fullName>
    <label>Mã td 1(ma_td_i)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>