force-app/main/default/objects/ConsolBill__c/fields/Mtd2matd2ibuying__c.field-meta.xml
<CustomField>
    <fullName>Mtd2matd2ibuying__c</fullName>
    <label>Mã td 2(ma_td2_i)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>