force-app/main/default/objects/ConsolBill__c/fields/Mtd3matd3ibuying__c.field-meta.xml
<CustomField>
    <fullName>Mtd3matd3ibuying__c</fullName>
    <label>Mã td 3(ma_td3_i)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>