force-app/main/default/objects/ConsolBill__c/fields/Mtsutmathueibuying__c.field-meta.xml
<CustomField>
    <fullName>Mtsutmathueibuying__c</fullName>
    <label>Mã t.suất(ma_thue_i)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>