force-app/main/default/objects/ConsolBill__c/fields/ngintP1giant2buying__c.field-meta.xml
<CustomField>
    <fullName>ngintP1giant2buying__c</fullName>
    <label>Đơn giá n.tệ:P1 (gia_nt2)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>