force-app/main/default/objects/ConsolBill__c/fields/ngiP0gia2buying__c.field-meta.xml
<CustomField>
    <fullName>ngiP0gia2buying__c</fullName>
    <formula>UnitPriceofBuyingLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Đơn giá:P0(gia2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>