force-app/main/default/objects/ConsolBill__c/fields/PAYABLESOA__c.field-meta.xml
<CustomField>
    <fullName>PAYABLESOA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PAYABLE SOA</label>
    <referenceTo>SOA__c</referenceTo>
    <relationshipLabel>Billings</relationshipLabel>
    <relationshipName>Billings</relationshipName>
    <type>Lookup</type>
</CustomField>