force-app/main/default/objects/ConsolBill__c/fields/Payment_to_Agent__c.field-meta.xml
<CustomField>
    <fullName>Payment_to_Agent__c</fullName>
    <formula>IF (AND ((NOT(ISBLANK(PaymentTo__c ))), OR (PaymentTo__c = ConsolidationShipmentName__r.MAgent__c, PaymentTo__c = ConsolidationShipmentName__r.Agent2nd__c)), TRUE, FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment to = Agent</label>
    <type>Checkbox</type>
</CustomField>