force-app/main/default/objects/ConsolBill__c/fields/PaymentConfirmedBuying__c.field-meta.xml
<CustomField>
    <fullName>PaymentConfirmedBuying__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Confirmed-Buying</label>
    <type>Checkbox</type>
</CustomField>