force-app/main/default/objects/ConsolBill__c/fields/PaymentNotesBuying__c.field-meta.xml
<CustomField>
    <fullName>PaymentNotesBuying__c</fullName>
    <label>Payment Notes - Buying</label>
    <type>TextArea</type>
</CustomField>