force-app/main/default/objects/ConsolBill__c/fields/PaymentSettleDateBuying__c.field-meta.xml
<CustomField>
    <fullName>PaymentSettleDateBuying__c</fullName>
    <label>Payment Settle Date - Buying</label>
    <type>Date</type>
</CustomField>