force-app/main/default/objects/ConsolBill__c/fields/PaymentSettleDateSelling__c.field-meta.xml
<CustomField>
    <fullName>PaymentSettleDateSelling__c</fullName>
    <label>Payment Settle Date - Selling</label>
    <type>Date</type>
</CustomField>