force-app/main/default/objects/ConsolBill__c/fields/PaymentTo__c.field-meta.xml
<CustomField>
    <fullName>PaymentTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment To</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Consol_Bills1</relationshipName>
    <type>Lookup</type>
</CustomField>