force-app/main/default/objects/ConsolBill__c/fields/PaymenttoFormula__c.field-meta.xml
<CustomField>
    <fullName>PaymenttoFormula__c</fullName>
    <formula>PaymentTo__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment to</label>
    <type>Text</type>
</CustomField>