force-app/main/default/objects/ConsolBill__c/fields/PaymentTypeSelling__c.field-meta.xml
<CustomField>
    <fullName>PaymentTypeSelling__c</fullName>
    <label>Payment Type - Selling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Type</valueSetName>
    </valueSet>
</CustomField>