force-app/main/default/objects/ConsolBill__c/fields/PreventEdit__c.field-meta.xml
<CustomField>
    <fullName>PreventEdit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prevent Edit</label>
    <type>Checkbox</type>
</CustomField>