force-app/main/default/objects/ConsolBill__c/fields/Pricing_namefomula__c.field-meta.xml
<CustomField>
    <fullName>Pricing_namefomula__c</fullName>
    <formula>PricingName__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Name - For</label>
    <type>Text</type>
</CustomField>