force-app/main/default/objects/ConsolBill__c/fields/PricingName__c.field-meta.xml
<CustomField>
    <fullName>PricingName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Service__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Service__c</referenceTo>
    <relationshipName>Consol_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>