force-app/main/default/objects/ConsolBill__c/fields/Profit_incl_tax_local__c.field-meta.xml
<CustomField>
    <fullName>Profit_incl_tax_local__c</fullName>
    <formula>Total_Selling_Incl_Tax_Local__c - AmountBuyingIncludingTaxLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit incl tax local</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>