force-app/main/default/objects/ConsolBill__c/fields/ProfitINCLTaxActual__c.field-meta.xml
<CustomField>
    <fullName>ProfitINCLTaxActual__c</fullName>
    <formula>TotalSellingInclTaxActual__c  -   TotalBuyingInclTaxActual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit INCL Tax (Actual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>