force-app/main/default/objects/ConsolBill__c/fields/ProfitINCLTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>ProfitINCLTaxFCY__c</fullName>
    <formula>Total_Selling_Incl_Tax_FCY__c  -  TotalBuyingInclTaxFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit INCL Tax (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>