force-app/main/default/objects/ConsolBill__c/fields/ProfitINCLTaxVND__c.field-meta.xml
<CustomField>
    <fullName>ProfitINCLTaxVND__c</fullName>
    <formula>Total_Selling_Incl_Tax_Local__c  -  TotalBuyingInclTaxLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit INCL Tax (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>