force-app/main/default/objects/ConsolBill__c/fields/QuoteLine__c.field-meta.xml
<CustomField>
    <fullName>QuoteLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line</label>
    <referenceTo>Quoteline__c</referenceTo>
    <relationshipName>ConsolBills</relationshipName>
    <type>Lookup</type>
</CustomField>