force-app/main/default/objects/ConsolBill__c/fields/RECEIVABLE_SOA__c.field-meta.xml
<CustomField>
    <fullName>RECEIVABLE_SOA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RECEIVABLE SOA</label>
    <referenceTo>SOA__c</referenceTo>
    <relationshipLabel>Billings (RECEIVABLE SOA)</relationshipLabel>
    <relationshipName>Billings1</relationshipName>
    <type>Lookup</type>
</CustomField>