force-app/main/default/objects/ConsolBill__c/fields/ReferencePrice__c.field-meta.xml
<CustomField>
    <fullName>ReferencePrice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Price</label>
    <referenceTo>ReferencePrice__c</referenceTo>
    <relationshipName>Consol_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>