force-app/main/default/objects/ConsolBill__c/fields/RemarkforBuying__c.field-meta.xml
<CustomField>
    <fullName>RemarkforBuying__c</fullName>
    <label>Remark for Buying</label>
    <type>TextArea</type>
</CustomField>