force-app/main/default/objects/ConsolBill__c/fields/RemarkForSelling__c.field-meta.xml
<CustomField>
    <fullName>RemarkForSelling__c</fullName>
    <label>Remark for Selling</label>
    <type>TextArea</type>
</CustomField>