force-app/main/default/objects/ConsolBill__c/fields/Request_for_Deduction_USD__c.field-meta.xml
<CustomField>
    <fullName>Request_for_Deduction_USD__c</fullName>
    <label>Request for Deduction (USD)</label>
    <summarizedField>Rollup_Requested_Amount_to_Billing__c.Deduction_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Rollup_Requested_Amount_to_Billing__c.Deduction_Currency__c</field>
        <operation>equals</operation>
        <value>USD</value>
    </summaryFilterItems>
    <summaryForeignKey>Rollup_Requested_Amount_to_Billing__c.Billings__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>