force-app/main/default/objects/ConsolBill__c/fields/Requested_for_PaymentVND__c.field-meta.xml
<CustomField>
    <fullName>Requested_for_PaymentVND__c</fullName>
    <label>Requested for Payment (VNĐ)</label>
    <summarizedField>Rollup_Requested_Amount_to_Billing__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Rollup_Requested_Amount_to_Billing__c.Currency__c</field>
        <operation>equals</operation>
        <value>VND</value>
    </summaryFilterItems>
    <summaryForeignKey>Rollup_Requested_Amount_to_Billing__c.Billings__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>