force-app/main/default/objects/ConsolBill__c/fields/Sales_man_for_Aprove__c.field-meta.xml
<CustomField>
    <fullName>Sales_man_for_Aprove__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales man for Aprove</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Billings</relationshipName>
    <type>Lookup</type>
</CustomField>