force-app/main/default/objects/ConsolBill__c/fields/SdngHTsdhddtynbuying__c.field-meta.xml
<CustomField>
    <fullName>SdngHTsdhddtynbuying__c</fullName>
    <label>Sử dụng HĐĐT(sd_hddt_yn)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>