force-app/main/default/objects/ConsolBill__c/fields/ServiceType__c.field-meta.xml
<CustomField>
    <fullName>ServiceType__c</fullName>
    <formula>TEXT(  PricingName__r.ServiceType__c )</formula>
    <label>Service Type</label>
    <type>Text</type>
</CustomField>