force-app/main/default/objects/ConsolBill__c/fields/SILine__c.field-meta.xml
<CustomField>
    <fullName>SILine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SI Line</label>
    <referenceTo>Sales_Order_Line__c</referenceTo>
    <relationshipName>Consol_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>