force-app/main/default/objects/ConsolBill__c/fields/SlngQsoluongbuying__c.field-meta.xml
<CustomField>
    <fullName>SlngQsoluongbuying__c</fullName>
    <formula>TEXT( Quantity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Số lượng:Q (so_luong)</label>
    <type>Text</type>
</CustomField>