force-app/main/default/objects/ConsolBill__c/fields/Tax_Included_Selling__c.field-meta.xml
<CustomField>
    <fullName>Tax_Included_Selling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Included-Selling</label>
    <type>Checkbox</type>
</CustomField>