force-app/main/default/objects/ConsolBill__c/fields/TaxRatioBuying__c.field-meta.xml
<CustomField>
    <fullName>TaxRatioBuying__c</fullName>
    <label>Tax Ratio-Buying</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>