force-app/main/default/objects/ConsolBill__c/fields/TaxRatioSelling__c.field-meta.xml
<CustomField>
    <fullName>TaxRatioSelling__c</fullName>
    <label>Tax Ratio-Selling</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>