force-app/main/default/objects/ConsolBill__c/fields/TgiRtygiabuying__c.field-meta.xml
<CustomField>
    <fullName>TgiRtygiabuying__c</fullName>
    <label>Tỷ giá:R(ty_gia)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>