force-app/main/default/objects/ConsolBill__c/fields/ThnhtinN0tien2buying__c.field-meta.xml
<CustomField>
    <fullName>ThnhtinN0tien2buying__c</fullName>
    <label>Thành tiền n.tệ:N1 (tien_nt2)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>