force-app/main/default/objects/ConsolBill__c/fields/Thusutthuesuatibuying__c.field-meta.xml
<CustomField>
    <fullName>Thusutthuesuatibuying__c</fullName>
    <formula>TEXT( TaxRatioBuying__c *100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thuế suất(thue_suati)</label>
    <type>Text</type>
</CustomField>