force-app/main/default/objects/ConsolBill__c/fields/TinckN0ckbuying__c.field-meta.xml
<CustomField>
    <fullName>TinckN0ckbuying__c</fullName>
    <label>Tiền ck:N0(ck)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>