force-app/main/default/objects/ConsolBill__c/fields/TinckntN1ckntbuying__c.field-meta.xml
<CustomField>
    <fullName>TinckntN1ckntbuying__c</fullName>
    <label>Tiền ck n.tệ:N1 (ck_nt)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>