force-app/main/default/objects/ConsolBill__c/fields/TinthuN0thuebuying__c.field-meta.xml
<CustomField>
    <fullName>TinthuN0thuebuying__c</fullName>
    <formula>AmountofTaxBuyingLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiền thuế:N0(thue)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>