force-app/main/default/objects/ConsolBill__c/fields/TinthuntN1thuentbuying__c.field-meta.xml
<CustomField>
    <fullName>TinthuntN1thuentbuying__c</fullName>
    <label>Tiền thuế n.tệ:N1(thue_nt)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>