force-app/main/default/objects/ConsolBill__c/fields/Tkcktkckbuying__c.field-meta.xml
<CustomField>
    <fullName>Tkcktkckbuying__c</fullName>
    <label>Tk ck(tk_ck)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>