force-app/main/default/objects/ConsolBill__c/fields/Tknmanxbuying__c.field-meta.xml
<CustomField>
    <fullName>Tknmanxbuying__c</fullName>
    <label>Tk nợ (ma_nx)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15411: CP làm hàng HN</fullName>
            </value>
            <value>
                <fullName>15412: CP làm hàng HX</fullName>
            </value>
            <value>
                <fullName>1542: Cước VT nội địa</fullName>
            </value>
            <value>
                <fullName>1543: CP kho bãi</fullName>
            </value>
            <value>
                <fullName>15441: Cước VT HN</fullName>
            </value>
            <value>
                <fullName>15442: Cước VT HX</fullName>
            </value>
            <value>
                <fullName>15443: CP TTQT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>