force-app/main/default/objects/ConsolBill__c/fields/Tkthutkthueibuying__c.field-meta.xml
<CustomField>
    <fullName>Tkthutkthueibuying__c</fullName>
    <label>Tk thuế(tk_thue_i)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>33311</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>