force-app/main/default/objects/ConsolBill__c/fields/Tlcktlckbuying__c.field-meta.xml
<CustomField>
    <fullName>Tlcktlckbuying__c</fullName>
    <label>Tỷ lệ ck  (%) (tl_ck)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>