force-app/main/default/objects/ConsolBill__c/fields/Tnhhadvtenvt__c.field-meta.xml
<CustomField>
    <fullName>Tnhhadvtenvt__c</fullName>
    <formula>BillNameatPrintLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tên h.hóa, d.vụ (ten_vt)</label>
    <type>Text</type>
</CustomField>