force-app/main/default/objects/ConsolBill__c/fields/Total_Selling_Incl_Tax_FCY__c.field-meta.xml
<CustomField>
    <fullName>Total_Selling_Incl_Tax_FCY__c</fullName>
    <formula>Amount_Tax_Selling_FCY__c +  TotalAmountofSellingFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Selling Incl Tax (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>