force-app/main/default/objects/ConsolBill__c/fields/Total_Selling_Incl_Tax_Local__c.field-meta.xml
<CustomField>
    <fullName>Total_Selling_Incl_Tax_Local__c</fullName>
    <formula>Amount_Tax_Selling_Local__c +  TotalAmountofSellingLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Selling Incl Tax (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>