force-app/main/default/objects/ConsolBill__c/fields/TotalAmountofBuyingActual__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofBuyingActual__c</fullName>
    <formula>Quantity__c * UnitPriceofBuyingActual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Buying(Actual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>