force-app/main/default/objects/ConsolBill__c/fields/TotalAmountofBuyingFCY__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofBuyingFCY__c</fullName>
    <formula>if ( Tax_Included__c = FALSE, UnitPriceofBuyingFCY__c * Quantity__c , (UnitPriceofBuyingFCY__c *Quantity__c)/(1+TaxRatioBuying__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Buying(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>