force-app/main/default/objects/ConsolBill__c/fields/TotalAmountofBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofBuyingLocal__c</fullName>
    <formula>if ( Tax_Included__c = FALSE,  UnitPriceofBuyingLocal__c *  Quantity__c , (UnitPriceofBuyingLocal__c *Quantity__c)/(1+ TaxRatioBuying__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Buying (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>