force-app/main/default/objects/ConsolBill__c/fields/TotalAmountofSellingActual__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofSellingActual__c</fullName>
    <formula>if ( Tax_Included_Selling__c = FALSE, UnitPriceofSellingActual__c * Quantity__c , UnitPriceofSellingActual__c *Quantity__c - AmountTaxSellingActual__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Selling(Actual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>