force-app/main/default/objects/ConsolBill__c/fields/TotalAmountofSellingFCY__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofSellingFCY__c</fullName>
    <formula>if (  Tax_Included_Selling__c = FALSE,  UnitPriceofSellingFCY__c * Quantity__c , UnitPriceofSellingFCY__c *Quantity__c - Amount_Tax_Selling_FCY__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Selling(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>