force-app/main/default/objects/ConsolBill__c/fields/TotalAmountofSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofSellingLocal__c</fullName>
    <formula>IF( Tax_Included_Selling__c = FALSE,  Quantity__c  *   UnitPriceofSellingLocal__c , Quantity__c  *  UnitPriceofSellingLocal__c -   Amount_Tax_Selling_Local__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Selling(VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>