force-app/main/default/objects/ConsolBill__c/fields/TotalBuyingInclTaxActual__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyingInclTaxActual__c</fullName>
    <formula>AmountofTaxBuyingActual__c +  TotalAmountofBuyingActual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Buying Incl Tax (Actual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>