force-app/main/default/objects/ConsolBill__c/fields/TotalBuyingInclTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyingInclTaxFCY__c</fullName>
    <formula>AmountofTaxBuyingFCY__c +  TotalAmountofBuyingFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Buying Incl Tax (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>