force-app/main/default/objects/ConsolBill__c/fields/UnitPriceofBuyingActual__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceofBuyingActual__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Unit Price of Buying (Actual)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>