force-app/main/default/objects/ConsolBill__c/fields/UnitPriceofSellingFCY__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceofSellingFCY__c</fullName>
    <label>Unit Price of Selling(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>