force-app/main/default/objects/ConsolBill__c/fields/UnitPriceofSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceofSellingLocal__c</fullName>
    <label>Unit Price of Selling(VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>