force-app/main/default/objects/ConsolBill__c/fields/UnpaidBalanceofBuyingActual__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceofBuyingActual__c</fullName>
    <formula>TotalBuyingInclTaxActual__c - AmountPaidforCustomerActual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpaid Balance of Buying (Actual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>