force-app/main/default/objects/ConsolBill__c/fields/UnpaidBalanceofSellingUSD__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceofSellingUSD__c</fullName>
    <formula>Total_Selling_Incl_Tax_FCY__c -  AmountPaidSellingUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpaid Balance of Selling (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>