force-app/main/default/objects/ConsolBill__c/fields/UnpaidBalanceofSellingVND__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceofSellingVND__c</fullName>
    <formula>Total_Selling_Incl_Tax_Local__c -  AmountPaidSellingVND__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpaid Balance of Selling (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>