force-app/main/default/objects/ConsolBill__c/fields/UnreceivedBalanceofSellingActual__c.field-meta.xml
<CustomField>
    <fullName>UnreceivedBalanceofSellingActual__c</fullName>
    <formula>TotalSellingInclTaxActual__c  -  AmountReceivedfromCustomerActual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unreceived Balance of Selling (Actual)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>