force-app/main/default/objects/ConsolBill__c/fields/UnreceivedBalanceofSellingFCY__c.field-meta.xml
<CustomField>
    <fullName>UnreceivedBalanceofSellingFCY__c</fullName>
    <formula>Total_Selling_Incl_Tax_FCY__c  -  AmountReceivedfromCustomerFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unreceived Balance of Selling (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>