force-app/main/default/objects/ConsolBill__c/fields/UnreceivedBalanceofSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>UnreceivedBalanceofSellingLocal__c</fullName>
    <formula>Total_Selling_Incl_Tax_Local__c  -  AmountReceivedfromCustomerLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unreceived Balance of Selling (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>