force-app/main/default/objects/ConsolBill__c/fields/vt_dvtbuying__c.field-meta.xml
<CustomField>
    <fullName>vt_dvtbuying__c</fullName>
    <formula>TEXT( ChargeUnit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Đvt(dvt)</label>
    <type>Text</type>
</CustomField>